--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "inngest": "^3.40.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
